apps/video-statement/overlays/qa/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-statement-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: qa-external
    alb.ingress.kubernetes.io/load-balancer-name: qa-eks-external-alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:495947449196:certificate/4a3a93b7-6a07-43f5-8d82-13ecd28be75e
    external-dns.alpha.kubernetes.io/hostname: qa-eks-videostatement.purpleray.com
    external-dns.alpha.kubernetes.io/ttl: "300"

spec:
  rules:
  - host: qa-eks-videostatement.purpleray.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: video-statement-service
            port:
              number: 5020
